# cplus2ASPMT

./: .gitignore  Makefile.am  README.md  bootstrap.sh  clean.sh  configure.ac
build-scripts/: autoclean.sh
src/: Configuration.cpp  Configuration.r2c  Context.cpp  Context.h  Makefile.am  ObjectData.cpp  ObjectData.h  RangeData.cpp  RangeData.h  SortData.h  Translator.cpp  Translator.h  car-PDDL-HA.aspmt  car-PDDL-HA.cp  main.cpp  therm-ha.cp  types.h
src/cplus2aspmttrans/: Configuration.h  ConstantData.cpp  ConstantData.h  FormulaPredicate.h  SortData.cpp
